[package]
name = "zero-ui-time"
version = "0.1.0"
authors = ["Samuel Guerra <sam.rodr.g@gmail.com>", "Well <well-r@hotmail.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "../zero-ui-app/README.md"

[dependencies]
zero-ui-app_context = { path = "../zero-ui-app_context" }

parking_lot = "0.12"