[package]
name = "zero-ui-unit"
version = "0.1.0"
authors = ["Samuel Guerra <sam.rodr.g@gmail.com>", "Well <well-r@hotmail.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "../zero-ui-app/README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
num-traits = "0.2"
bytemuck = { version = "1", features = ["derive"] }
euclid = { version = "0.22", features = ["serde", "bytemuck"] }