[package]
name = "zero-ui-view-api"
version = "0.1.0"
authors = ["Samuel Guerra <sam.rodr.g@gmail.com>", "Well <well-r@hotmail.com>"]
edition = "2021"
license = "Apache-2.0"

[features]
default = ["ipc"]

# Enables creation of separate or pre-build view, enabled by default.
#
# When this is enabled communication with the view is (de)serialized which can add a 
# minor cost, something like a 1ms per 3MB frame request.
ipc = ["ipc-channel", "duct"]

[dependencies]
# Firefox 115 release
webrender_api = { git = "https://github.com/servo/webrender.git", rev = "ac434de50b49830032391a042359b7c588b2350b" }

serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
duct = { version = "0.13", optional = true }

tracing = "0.1"
flume = { version = "0.10", default-features  = false }
num-traits = "0.2"
rustc-hash = "1"

bitflags = { version = "2", features = ["serde"] }

ipc-channel = { version = "0.16", optional = true }
bincode = "1"
parking_lot = "0.12"
serde_variant = "0.1"
