[package]
name = "zero-ui-view-api"
version = "0.1.0"
authors = ["Samuel Guerra <sam.rodr.g@gmail.com>", "Well <well-r@hotmail.com>"]
edition = "2021"
license = "Apache-2.0"

[features]
default = ["ipc"]

# Enables creation of separate or pre-build view, enabled by default.
#
# When this is enabled communication with the view is (de)serialized which can add a 
# minor cost, something like a 1ms per 3MB frame request.
ipc = ["ipc-channel", "duct"]

[dependencies]
webrender_api = { git = "https://github.com/servo/webrender.git", rev = "858962993c5e06067557d36b76faaf354b8002fa" }
euclid = { version = "0.22.6", features = ["serde", "bytemuck"] } # same version as webrender, but with bytemuck

zero-ui-units = { path = "../zero-ui-units" }

serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
duct = { version = "0.13", optional = true }

tracing = "0.1"
flume = { version = "0.11", default-features  = false }
num-traits = "0.2"
rustc-hash = "1"

bitflags = { version = "2", features = ["serde", "bytemuck"] }
bytemuck = { version = "1", features = ["derive"] }

ipc-channel = { version = "0.18", optional = true }
bincode = "1"
parking_lot = "0.12"
serde_variant = "0.1"

unic-langid = { version = "0.9", features = ["serde"] }