[package]
name = "zero-ui-view-prebuilt"
version = "0.1.0"
authors = ["Samuel Guerra <sam.rodr.g@gmail.com>", "Well <well-r@hotmail.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "../zero-ui-app/README.md"

[dependencies]
libloading = "0.8"

[build-dependencies]
hashers = "1"
base64 = "0.21"