[package]
name = "zero-ui-view"
version = "0.1.0"
authors = ["Samuel Guerra <sam.rodr.g@gmail.com>", "Well <well-r@hotmail.com>"]
edition = "2021"
license = "Apache-2.0"

[features]
default = ["ipc", "software"]

# Enables pre-build and init as view-process.
#
# If this is enabled all communication with the view is serialized/deserialized, 
# even if is running in same-process mode.
#
# Enabled by default.
ipc = ["zero-ui-view-api/ipc"]

# Enables software renderer fallback.
#
# If enabled and a native OpenGL 3.2 driver is not available the `swgl` software renderer is used.
#
# The `clang-cl` dependency is required to build with this feature on Windows, you can install a copy
# by installing LLVM (https://releases.llvm.org/) and adding the installation
# to the path with something like `set PATH=%PATH%;C:\Program Files\LLVM\bin`.
# Then `set CC=clang-cl` and `set CXX=clang-cl`.
#
# Enabled by default.
software = ["swgl"]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
zero-ui-view-api = { path = "../zero-ui-view-api", default-features = false }
webrender = { path = "../dependencies/webrender/webrender" }
swgl = { path = "../dependencies/webrender/swgl", optional = true }
tracing = "0.1"
gleam = "0.13.1" # matches webrender
glutin = { git = "https://github.com/SamRodri/glutin", branch = "get-module-fix", default-features = false, features = ["x11", "wayland", "wayland-dlopen"] } # wayland-csd-adwaita feature breaks font-kit
flume = "0.10"
is_main_thread = "0.1"
image = "0.24"
img-parts = "0.3"
byteorder = "1"
rustc-hash = "1"
rayon = "1"
backtrace = "0.3"
linear-map = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.39.0", features = ["Win32_Foundation", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_Devices_HumanInterfaceDevice", "Win32_UI_Input", "Win32_UI_Input_KeyboardAndMouse", "Win32_Graphics_Gdi", "Win32_Graphics_OpenGL", "Win32_System_Com", "Win32_System_SystemServices"] }

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "openbsd", target_os = "netbsd"))'.dependencies]
wayland-client = { version = "0.29", default_features = false,  features = ["use_system_lib"] }
# xlib is re-exported by glutin/winit

# prebuild profile defined in the workspace toml